--- a/currenc/css/style.css
+++ b/currenc/css/style.css
@@ -11,10 +11,7 @@ p {
     padding: 0;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
+a {text-decoration: none;color: inherit;}
 
 ul,
 li {
@@ -30,17 +27,12 @@ li {
     user-select: none;
 }
 
-h3 {
-    text-align: left;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    font-weight: 500;
-}
+h3 {text-align: left;margin-top: 20px;margin-bottom: 30px;font-weight: 500;}
 
 /* main styles */
 body {
     font-family: 'Encode Sans Condensed', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 1rem;
+    font-size:1rem;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     padding: 0;
@@ -48,39 +40,34 @@ body {
     scroll-behavior: smooth;
 }
 
-.app__layout {
-    width: 100%;
-    height: calc(100vh - 56px);
-}
+.app__layout {width: 100%;height: calc(100vh - 56px);}
+
+#exchange-main-container {display:flex;flex-direction:column;height:100%;}
+#base-currency-wrapper {background:#FF5354;height:50%;}
+#converted-currency-wrapper {background:#ffe;height:50%;}
 
 header {
-    position: fixed;
-    width: 100%;
-    height: 56px;
-    top: 0;
-    background-color: #1E88E5;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.19);
-    display: -webkit-box;
-    display: -ms-flexbox;
+    position:fixed;
+    width:100%;
+    height:56px;
+    top:0;
+    background-color:#FF5354;
     display: flex;
-    overflow: hidden;
     z-index: 1;
     color: #fff;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
-    -webkit-transition: background-color 250ms linear;
     transition: background-color 250ms linear;
 }
 
 .app__offline {
-    background-color: #1ab8ef;
+    background-color:#464a4c;/* #1ab8ef;*/
 }
 
-.offline {
+/*.offline {
     background: #1f78f3;
-}
+.green : #8ac249
+.amber : #fec006
+.red : #e81d62}*/
 
 .container h4 {
     font-family: Consolas, "courier new";
@@ -113,8 +100,6 @@ header {
     font-weight: 600;
     letter-spacing: 2px;
     font-size: 24px;
-    -ms-flex-item-align: center;
-    -ms-grid-row-align: center;
     align-self: center;
     margin-left: 10px;
 }
@@ -192,13 +177,7 @@ header {
     background: #e7e7e7;
 }
 
-.app__content {
-    width: 320px;
-    height: 100%;
-    margin: 0 auto;
-    margin-top: 56px;
-    padding-top: 10px;
-}
+.app__content {position:relative;min-width:320px;height:100%;margin:0 auto;margin-top:56px;}
 
 .toast__container {
     position: fixed;
@@ -221,12 +200,10 @@ header {
 }
 
 .toast__msg {
-    width: 250px;
+    width: 250px;font-family:sans-serif;
     min-height: 50px;
     background: rgba(0, 0, 0, 0.9);
     color: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -298,287 +275,4 @@ button:disabled {
 .custom__input:checked + .custom__checkbox::before {
     left: 25px;
     background: #0288d1;
-}
-
-.card__container {
-    margin-top: 30px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-}
-
-.card {
-    width: 80%;
-    min-height: 130px;
-    background: #fff;
-    margin: 20px auto;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    border-radius: 2px;
-    position: relative;
-    padding: 4px 1em;
-}
-
-.card a {
-    color: red;
-    cursor: pointer;
-}
-
-.card__title,
-.card__desc {
-    display: block;
-    font-style: italic;
-    font-size: 14px;
-    text-align: center;
-}
-
-.card__title {
-    margin-left: 5px;
-    font-weight: 500;
-}
-
-.card__temp {
-    padding: 20px;
-    padding-bottom: 10px;
-}
-
-.card__following,
-.card__followers {
-    padding: 10px 20px 5px;
-}
-
-.card__desc {
-    padding: 12px 15px;
-    vertical-align: top;
-}
-
-.card__img {
-    width: 60px;
-    height: 60px;
-    display: block;
-    margin: 20px auto 10px;
-    border-radius: 50%;
-}
-
-b {
-    font-family: inherit;
-    font-weight: 500;
-}
-
-.card b {
-    margin-right: 5px;
-}
-
-.card__temp,
-.card__followers,
-.card__following {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    margin-bottom: 5px;
-}
-
-.card__followers {
-    margin-bottom: 20px;
-}
-
-.fab {
-    width: 56px;
-    height: 56px;
-    background: #6b6b6b;
-    border-radius: 50%;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-    color: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    cursor: pointer;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    margin: 25px;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    overflow: hidden;
-}
-
-.fab.active {
-    background: #F44336;
-}
-
-.fab__ripple {
-    position: absolute;
-    left: -17px;
-    bottom: -12px;
-    width: 56px;
-    height: 56px;
-    -webkit-transform: scale(0.5);
-    transform: scale(0.5);
-    background: #fff;
-    border-radius: 50%;
-    -webkit-transform-origin: 50%;
-    transform-origin: 50%;
-    -webkit-transition: -webkit-transform 0.35s cubic-bezier(0, 0, 0.3, 1) 0ms;
-    transition: -webkit-transform 0.35s cubic-bezier(0, 0, 0.3, 1) 0ms;
-    transition: transform 0.35s cubic-bezier(0, 0, 0.3, 1) 0ms;
-    transition: transform 0.35s cubic-bezier(0, 0, 0.3, 1) 0ms, -webkit-transform 0.35s cubic-bezier(0, 0, 0.3, 1) 0ms;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    will-change: transform;
-    z-index: 2;
-    opacity: 0;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.fab:active .fab__ripple {
-    opacity: 0.2;
-    -webkit-transform: scale(1) translate(31%, -22%);
-    transform: scale(1) translate(31%, -22%);
-}
-
-.fab__image {
-    overflow: hidden;
-    z-index: 3;
-}
-
-.add__card {
-    margin: 40px auto;
-    text-align: center;
-}
-
-.add__input {
-    width: 170px;
-    height: 35px;
-    border: 1px solid #ccc;
-    padding-left: 10px;
-    font-size: 13px;
-    display: block;
-    margin: 10px auto;
-}
-
-.add__btn {
-    height: 34px;
-    min-width: 70px;
-    margin-top: 10px;
-    display: block;
-    margin-left: 0;
-}
-
-.add__card ul,
-.add__card li,
-.share__container li {
-    width: 280px;
-    text-align: left;
-    margin: 15px auto;
-}
-
-.add__card p {
-    font-weight: 500;
-    font-size: 18px;
-    margin-top: 40px;
-}
-
-.card span {
-    display: block;
-}
-
-.add__to-card {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    margin-bottom: 20px;
-}
-
-.bg-sync__text {
-    font-size: 12px;
-    padding-left: 5px;
-    color: #008000;
-}
-
-.custom__button.custom__button-bg {
-    padding: 0;
-    margin: 0;
-    display: inline-block;
-}
-
-.custom__button.custom__button-bg.hide {
-    display: none;
-}
-
-b i a {
-    text-decoration: underline;
-    color: #1E88E5;
-}
-
-.add__card ul + p {
-    margin-top: 20px;
-}
-
-.card__spinner {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
-    background: rgba(0, 0, 0, 0.16);
-    display: none;
-}
-
-.card__spinner::after {
-    content: "Loading...";
-    color: #1E88E5;
-    background: #fff;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
-    text-align: center;
-    line-height: 380px;
-    font-size: 18px;
-}
-
-.loader {
-    left: 0;
-    top: 0;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    background: rgba(0, 0, 0, .5);
-}
-
-.loader #spinner {
-    box-sizing: border-box;
-    stroke: #673AB7;
-    stroke-width: 3px;
-    -webkit-transform-origin: 50%;
-    transform-origin: 50%;
-    -webkit-animation: line 1.6s cubic-bezier(0.4, 0, 0.2, 1) infinite, rotate 1.6s linear infinite;
-    animation: line 1.6s cubic-bezier(0.4, 0, 0.2, 1) infinite, rotate 1.6s linear infinite;
 }
