--- a/currenc/css/style.css
+++ b/currenc/css/style.css
@@ -36,6 +36,10 @@ body,
 p {
     margin: 0;
     padding: 0;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 a {text-decoration: none;color: inherit;}
@@ -47,70 +51,116 @@ li {
     margin: 0;
 }
 
-.no__select {
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
 h3 {text-align: left;margin-top: 20px;margin-bottom: 30px;font-weight: 500;}
 
+html, body {font-size:16px;-webkit-tap-highlight-color:transparent;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-webkit-text-size-adjust:100%;}
 /* main styles */
 body {
     font-family: 'Encode Sans Condensed', 'Source Sans Pro', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size:1rem;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
+    scroll-behavior:smooth;background:#cf4647;
 }
 
 .app__layout {width: 100%;height: calc(100vh - 56px);}
 
 #exchange-main-container {display:flex;flex-direction:column;height:100%;}
-#base-currency-wrapper {background:#FF5354;height:50%;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;}
+#base-currency-wrapper {background:#cf4647;height:50%;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;}
 #converted-currency-wrapper {background:#fcf9fa;height:50%;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;}
-#converted-to {display:block;width:65%;height:120px;margin:0 auto;line-height:120px;font-size:60px;font-weight:100;color:#ee4e52;text-align:center;}
+#converted-to {display:block;width:100%;height:120px;margin:0 auto;line-height:120px;font-size:300%;font-weight:100;color:#ee4e52;text-align:center;}
+#conversion-info {display:block;text-align:center;width:auto;height:auto;color:#ee4e52;font-size:13px;letter-spacing:2px;transform:translateY(-24px);}
 
-header {position:fixed;width:100%;height:56px;top:0;background-color:#FF5354;display:flex;z-index:1;color:#fff;user-select:none;transition:background-color 250ms linear;}
+header {position:fixed;width:100%;height:56px;top:0;background-color:#cf4647;display:flex;z-index:1;color:#fff;user-select:none;transition:background-color 250ms linear;}
 
-a[data-currency-symbol] {pointer-events: none;}
-
-#currencies-list {transition:transform 0.3s cubic-bezier(0, 0, 0.30, 1);will-change: transform;position:absolute;z-index:200;top:-56px;bottom:0;left:0;right:0;background:#fcfafa;overflow-y:scroll;transform:translateX(-105%);}
+#currencies-list {transition:transform 0.3s cubic-bezier(0, 0, 0.30, 1);will-change:transform;position:fixed;z-index:500;top:0;background:#fff5f6;transform:translateX(-105%);height:100%;width:100%;}
 #currencies-list.open {transform:translateX(0);}
 
-#currencies-list .header {height:56px;margin-bottom:24px;}
-#currencies-list .header span {height:48px;width:48px;position:relative;margin:4px;display:block;cursor:pointer;}
-#currencies-list .header span::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #ff5354;top:50%;left:50%;transform:translateX(-50%);}
-#currencies-list .header span::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #ff5354;border-bottom:2px solid #ff5354;transform:rotate(45deg) translateX(190%) translateY(30%);}
-#currencies-list ul.currencies {display:block;text-align:left;padding:16px;}
-#currencies-list ul.currencies li {padding:8px;border-bottom:1px solid #f9e0e1;position:relative;}
-#currencies-list ul.currencies li.active::after {position:absolute;content:"";width:24px;height:8px;border:none;border-bottom:2px solid #ff5354;border-left:2px solid #ff5354;transform:rotate(-45deg);top:35%;right:16px;}
-#currencies-list ul.currencies li a {display:block;color:#ff5354;cursor:pointer;}
-#currencies-list ul.currencies li a span {font-family:'Source Sans Pro';font-size:14px;letter-spacing:1px;color:#ffa5a6;margin-left:8px;font-weight:100;}
+#currencies-list .header {height:56px;position:fixed;width:100%;background:#fff;display:flex;z-index:5;}
+#currencies-list .header span.back__button {height:48px;width:48px;position:relative;margin:4px;display:block;cursor:pointer;}
+#currencies-list .header span.back__button::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
+#currencies-list .header span.back__button::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
+#currencies-list .header span.search__button {height:48px;width:48px;position:relative;margin:4px 4px 4px auto;display:block;cursor:pointer;}
+#currencies-list .header span.search__button::before {content:"";position:absolute;width:12px;height:1px;border-bottom:3px solid #cf4647;top:50%;left:50%;transform:rotate(45deg) translateX(25%) translateY(110%);}
+#currencies-list .header span.search__button::after {content:"";position:absolute;width:20px;height:20px;border:2px solid #cf4647;transform:translateX(50%) translateY(50%);border-radius:100%;}
+#currencies-list ul.currencies {display:block;text-align:left;padding:16px;height:calc(100% - 80px);overflow-y:scroll;margin-top:80px;}
+#currencies-list ul.currencies li {cursor:pointer;padding:8px;border-bottom:1px solid #f9e0e1;position:relative;}
+#currencies-list ul.currencies li.currency_list_title {pointer-events:none;height:56px;line-height:56px;}
+#currencies-list ul.currencies li.active::after {position:absolute;content:"";width:24px;height:8px;border:none;border-bottom:2px solid #cf4647;border-left:2px solid #cf4647;transform:rotate(-45deg);top:35%;right:16px;}
+#currencies-list ul.currencies li a {display:block;color:#cf4647;letter-spacing:.6px;pointer-events:none;}
+#currencies-list ul.currencies li a span {pointer-events:none;font-family:'Source Sans Pro', sans-serif;font-size:14px;letter-spacing:1px;color:#ffa5a6;margin-left:8px;font-weight:100;}
 
 .base__currency {text-align:center;}
-.base__currency input {font-size:80px;width:50%;padding: 0 0 16px;text-align:center;background:transparent;border:unset;border-bottom:1px solid #fff;outline:none;color:#FCF9FA;font-family:'Encode Sans Condensed', sans-serif;font-weight:100;}
-.base__currency__name,.converted__currency__name {max-width:320px;padding:0 80px;display:table;height:48px;margin:16px auto;color:#f9e0e1;line-height:48px;border:2px solid #ffffff9c;width:auto;cursor:pointer;border-radius:53px;position:relative;}
+.base__currency #input-wrapper {width:264px;display:block;margin:0 auto;}
+.moveUp {position:absolute!important;z-index:200;left:50%;transform:translateX(-50%);top:0;animation:move-up .45s cubic-bezier(1, 0, 0.30, 1);}
+    @keyframes move-up {
+        0% {top:80px;}
+        100% {top:0;}
+    }
+
+.base__currency #input-wrapper label {transform:translateX(-50%) translateY(-50%);bottom:0;left:0;color:#fff;font-size:28px;width:64px;height:64px;text-align:center;line-height:80px;}
+.base__currency #input-wrapper input {font-size:80px;width:100%;height:115px;text-align:center;background:transparent;border:none;outline:none;color:#FCF9FA;font-family:'Encode Sans Condensed', sans-serif;font-weight:100;}
+.base__currency__name,.converted__currency__name {width:300px;padding:0 30px;height:48px;margin:16px auto;color:#f9e0e1;line-height:42px;border:2px solid #fecdd2;cursor:pointer;border-radius:53px;position:relative;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;letter-spacing:0.1em;}
 .base__currency__name::after, .converted__currency__name::after {position:absolute;content:"";width:6px;height:6px;border:none;border-right:2px solid #f9e0e1;border-bottom:2px solid #f9e0e1;transform:rotate(45deg);top:21px;right:20px;}
 .converted__currency__name::after {border-right:2px solid #ee4e52;border-bottom:2px solid #ee4e52;}
+label {position:absolute;bottom:20%;color:#fff;left:15%;font-size:30px;}
 
 .converted__currency__name::after {border-right:2px solid #ee4e52;border-bottom:2px solid #ee4e52;}
 .converted__currency {display:block;width:100%;}
-.converted__currency__name{color:#ff5354;text-align: center;border-color:#ff5354;}
+.converted__currency__name{color:#cf4647;text-align: center;border-color:#cf4647;}
 
 .app__offline {background-color:#464a4c;/* #1ab8ef;*/}
 
 .absolute{position:absolute;}
+.relative{position:relative;}
+.inline {display:inline;}
+.disabled {pointer-events:none;}
+.pointer {cursor:pointer;}
 
-#convert-button{top:50%;left:50%;display:flex;align-items:center;justify-content:center;width:90px;height:90px;transform:translateX(-50%) translateY(-50%);cursor:pointer;border:5px solid #ff5354;background:#fff;border-radius:50%;z-index:100;}
+#convert-button{top:50%;left:50%;display:flex;align-items:center;justify-content:center;width:90px;height:90px;transform:translateX(-50%) translateY(-50%);border:5px solid #cf4647;background:#fff;border-radius:50%;z-index:100;}
 #convert-button span {width:48px;height:48px;display:block;position:relative;transform: rotate(-90deg);}
-#convert-button span::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #ff5354;top:50%;left:50%;transform:translateX(-50%);}
-#convert-button span::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #ff5354;border-bottom:2px solid #ff5354;transform:rotate(45deg) translateX(190%) translateY(30%);}
+#convert-button span::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
+#convert-button span::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
 
-#keypad {height:50%;width:100%;bottom:0;background:#464a4c;z-index:200;transform:translateY(105%);display:none;}
+/*#keypad {height:50%;width:100%;top:0;background:#464a4c;z-index:10;transform:translateY(0);opacity:1;will-change:transform, opacity;transition:transform 0.1s cubic-bezier(0, 0, 0.30, 1);padding:56px 0;}*/
+#keypad {height:100%;width:100%;top:0;background:#cf4647;z-index:100;padding:152px 0 56px;display:none;will-change:display;}
+.slideInUp{display:block!important;animation:slide-in-up .3s cubic-bezier(0, 0, 0.30, 1);}
+    @keyframes slide-in-up {from{opacity:0;margin-top:50%;}to{opacity:1;margin-top:0;}}
+
+.number__keypad {display:grid;grid-auto-flow:row;grid-template-columns:auto auto auto;grid-gap:8px;padding:0 8px;height:100%;}
+.key, .key a {align-items:center;justify-content:center;display:flex;color:#fff;font-size:28px;cursor:pointer;}
+.key a {border:1px solid rgba(255, 255, 255, 0.4);border-radius:50%;width:64px;height:64px;background:#d6444d;pointer-events:none;}
+.key:last-child a span {position:absolute;content:"";width:24px;height:8px;border:none;border-bottom:2px solid #cf4647;border-left:2px solid #cf4647;transform:rotate(-45deg);top:35%;right:16px;}
+
+.loader {bottom:25%;left:50%;width:8px;height:8px;border-radius:50%;display:none;}
+.loader.show{/*background-color:#46494b;animation:sonarLoading 1s linear infinite;*/display:block;}
+.ball-scale-multiple>div {
+    background-color: #46494b;
+    border-radius: 100%;
+}
+.ball-scale-multiple>div {
+    position: absolute;
+    left: -30px;
+    top: 0;
+    opacity: 0;
+    margin: 0;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: ball-scale-multiple 1s 0s linear infinite;
+    animation: ball-scale-multiple 1s 0s linear infinite;
+}
+.ball-scale-multiple>div:nth-child(2) {
+    -webkit-animation-delay: -.4s;
+    animation-delay: -.4s;
+}
+.ball-scale-multiple>div:nth-child(3) {
+    -webkit-animation-delay: -.2s;
+    animation-delay: -.2s;
+}
+@keyframes ball-scale-multiple{0%{-webkit-transform:scale(0);transform:scale(0);opacity:0}5%{opacity:1}100%{-webkit-transform:scale(1);transform:scale(1);opacity:0}}
+@keyframes sonarLoading {
+    0% {box-shadow: 0 0 0 0 #46494b}
+    100% {box-shadow: 0 0 0 20px rgba(249,203,64,0)}
+}
+
 
 /*.offline {
     background: #1f78f3;
@@ -122,7 +172,7 @@ header svg {width:48px;height:48px;margin:4px;display:flex;align-items:center;ju
 
 .header__title {color:#fff;font-family:'Source Sans Pro', sans-serif;letter-spacing:2px;font-size:24px;align-self:center;}
 
-.app__content {position:relative;min-width:320px;height:100%;margin:0 auto;margin-top:56px;}
+.app__content {position:relative;min-width:320px;height:100%;margin:56px auto 0;}
 
 .toast__container {position:fixed;bottom:20px;left:20px;pointer-events:none;}
 
@@ -130,5 +180,23 @@ header svg {width:48px;height:48px;margin:4px;display:flex;align-items:center;ju
 .toast__msg--hide {opacity:0;}
 
 @media screen and (max-width: 768px) {
-    .header__title {font-size:20px;transform:translateX(25%);}
+    .header__title {font-size:20px;margin:0 auto;}
+    header svg {position:absolute;}
 }
+
+@media screen and (max-device-height: 568px) {
+    .base__currency__name, .converted__currency__name {max-width:260px!important;font-size:16px;letter-spacing:1px;}
+    .base__currency input {font-size:60px!important;padding:0 0 4px 8px!important;}
+    .base__currency #input-wrapper label {font-size:20px!important;width:56px;height:56px;}
+    #converted-to {font-size:48px;}
+}
+
+@media screen and (max-device-height: 731px) {
+
+}
+
+/*
+... done    TODO: remove tap-highlights from DOM elements that responds to click event
+COMMENT: #f0f2f4,#ff5252,#e5d4d4,#3b464b,#cc4243,#9b8c8f,#fb9597,#fabac2
+COMMENT: #f6972e, #323A45, #90857A, #A09F9B
+*/
