--- a/currenc/css/style.css
+++ b/currenc/css/style.css
@@ -74,14 +74,14 @@ header {position:fixed;width:100%;height:56px;top:0;background-color:#cf4647;dis
 #currencies-list {transition:transform 0.3s cubic-bezier(0, 0, 0.30, 1);will-change:transform;position:fixed;z-index:500;top:0;background:#fff5f6;transform:translateX(-105%);height:100%;width:100%;}
 #currencies-list.open {transform:translateX(0);}
 
-#currencies-list .header {height:56px;position:fixed;width:100%;background:#fff;display:flex;z-index:5;}
+#currencies-list .header {height:56px;position:fixed;width:98%;background:#fff;display:flex;z-index:5;top:8px;border-radius:16px;padding:0 8px;left:1%;box-shadow:0 0 15px -5px rgba(208, 70, 71, 0.9);}
 #currencies-list .header span.back__button {height:48px;width:48px;position:relative;margin:4px;display:block;cursor:pointer;}
 #currencies-list .header span.back__button::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
 #currencies-list .header span.back__button::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
 #currencies-list .header span.search__button {height:48px;width:48px;position:relative;margin:4px 4px 4px auto;display:block;cursor:pointer;}
 #currencies-list .header span.search__button::before {content:"";position:absolute;width:12px;height:1px;border-bottom:3px solid #cf4647;top:50%;left:50%;transform:rotate(45deg) translateX(25%) translateY(110%);}
 #currencies-list .header span.search__button::after {content:"";position:absolute;width:20px;height:20px;border:2px solid #cf4647;transform:translateX(50%) translateY(50%);border-radius:100%;}
-#currencies-list ul.currencies {display:block;text-align:left;padding:16px;height:calc(100% - 80px);overflow-y:scroll;margin-top:80px;}
+#currencies-list ul.currencies {display:block;text-align:left;padding:80px 16px 40px 32px;height:100%;overflow-y:scroll;}
 #currencies-list ul.currencies li {cursor:pointer;padding:8px;border-bottom:1px solid #f9e0e1;position:relative;}
 #currencies-list ul.currencies li.currency_list_title {pointer-events:none;height:56px;line-height:56px;}
 #currencies-list ul.currencies li.active::after {position:absolute;content:"";width:24px;height:8px;border:none;border-bottom:2px solid #cf4647;border-left:2px solid #cf4647;transform:rotate(-45deg);top:35%;right:16px;}
@@ -115,10 +115,10 @@ label {position:absolute;bottom:20%;color:#fff;left:15%;font-size:30px;}
 .disabled {pointer-events:none;}
 .pointer {cursor:pointer;}
 
-#convert-button{top:50%;left:50%;display:flex;align-items:center;justify-content:center;width:90px;height:90px;transform:translateX(-50%) translateY(-50%);border:5px solid #cf4647;background:#fff;border-radius:50%;z-index:100;}
-#convert-button span {width:48px;height:48px;display:block;position:relative;transform: rotate(-90deg);}
-#convert-button span::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
-#convert-button span::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
+#center-button{top:50%;left:50%;display:flex;align-items:center;justify-content:center;width:90px;height:90px;transform:translateX(-50%) translateY(-50%);border:5px solid #cf4647;background:#fff;border-radius:50%;z-index:100;}
+#center-button span {width:48px;height:48px;display:block;position:relative;transform: rotate(-90deg);}
+#center-button span::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
+#center-button span::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
 
 /*#keypad {height:50%;width:100%;top:0;background:#464a4c;z-index:10;transform:translateY(0);opacity:1;will-change:transform, opacity;transition:transform 0.1s cubic-bezier(0, 0, 0.30, 1);padding:56px 0;}*/
 #keypad {height:100%;width:100%;top:0;background:#cf4647;z-index:100;padding:152px 0 56px;display:none;will-change:display;}
@@ -128,7 +128,7 @@ label {position:absolute;bottom:20%;color:#fff;left:15%;font-size:30px;}
 .number__keypad {display:grid;grid-auto-flow:row;grid-template-columns:auto auto auto;grid-gap:8px;padding:0 8px;height:100%;}
 .key, .key a {align-items:center;justify-content:center;display:flex;color:#fff;font-size:28px;cursor:pointer;}
 .key a {border:1px solid rgba(255, 255, 255, 0.4);border-radius:50%;width:64px;height:64px;background:#d6444d;pointer-events:none;}
-.key:last-child a span {position:absolute;content:"";width:24px;height:8px;border:none;border-bottom:2px solid #cf4647;border-left:2px solid #cf4647;transform:rotate(-45deg);top:35%;right:16px;}
+.key:last-of-type a span {position:absolute;content:"";width:24px;height:8px;border:none;border-bottom:2px solid #ffffff;border-left:2px solid #ffffff;transform:rotate(-45deg);top:40%;right:18px;}
 
 .loader {bottom:25%;left:50%;width:8px;height:8px;border-radius:50%;display:none;}
 .loader.show{/*background-color:#46494b;animation:sonarLoading 1s linear infinite;*/display:block;}
