--- a/currenc/css/style.css
+++ b/currenc/css/style.css
@@ -69,12 +69,12 @@ body {
 #converted-to {display:block;width:100%;height:120px;margin:0 auto;line-height:120px;font-size:300%;font-weight:100;color:#ee4e52;text-align:center;}
 #conversion-info {display:block;text-align:center;width:auto;height:auto;color:#ee4e52;font-size:13px;letter-spacing:2px;transform:translateY(-24px);}
 
-header {position:fixed;width:100%;height:56px;top:0;background-color:#cf4647;display:flex;z-index:1;color:#fff;user-select:none;transition:background-color 250ms linear;}
+header {position:fixed;width:100%;height:56px;top:0;background-color:#cf4647;display:flex;z-index:100;color:#fff;user-select:none;transition:background-color 250ms linear;}
 
-#currencies-list {transition:transform 0.3s cubic-bezier(0, 0, 0.30, 1);will-change:transform;position:fixed;z-index:500;top:0;background:#fff5f6;transform:translateX(-105%);height:100%;width:100%;}
+#currencies-list {transition:transform 0.3s cubic-bezier(0, 0, 0.30, 1);will-change:transform;position:fixed;z-index:300;top:0;background:#fff5f6;transform:translateX(-105%);height:100%;width:100%;}
 #currencies-list.open {transform:translateX(0);}
 
-#currencies-list .header {height:56px;position:fixed;width:98%;background:#fff;display:flex;z-index:5;top:8px;border-radius:16px;padding:0 8px;left:1%;box-shadow:0 0 15px -5px rgba(208, 70, 71, 0.9);}
+#currencies-list .header {height:56px;position:fixed;width:98%;background:#fff;display:flex;z-index:301;top:8px;border-radius:16px;padding:0 8px;left:1%;box-shadow:0 0 15px -5px rgba(208, 70, 71, 0.9);}
 #currencies-list .header span.back__button {height:48px;width:48px;position:relative;margin:4px;display:block;cursor:pointer;}
 #currencies-list .header span.back__button::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
 #currencies-list .header span.back__button::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
@@ -90,7 +90,7 @@ header {position:fixed;width:100%;height:56px;top:0;background-color:#cf4647;dis
 
 .base__currency {text-align:center;}
 .base__currency #input-wrapper {width:264px;display:block;margin:0 auto;}
-.moveUp {position:absolute!important;z-index:200;left:50%;transform:translateX(-50%);top:0;animation:move-up .45s cubic-bezier(1, 0, 0.30, 1);}
+.moveUp {position:absolute!important;z-index:500;left:50%;transform:translateX(-50%);top:0;animation:move-up .45s cubic-bezier(1, 0, 0.30, 1);}
     @keyframes move-up {
         0% {top:80px;}
         100% {top:0;}
@@ -115,17 +115,16 @@ label {position:absolute;bottom:20%;color:#fff;left:15%;font-size:30px;}
 .disabled {pointer-events:none;}
 .pointer {cursor:pointer;}
 
-#center-button{top:50%;left:50%;display:flex;align-items:center;justify-content:center;width:90px;height:90px;transform:translateX(-50%) translateY(-50%);border:5px solid #cf4647;background:#fff;border-radius:50%;z-index:100;}
-#center-button span {width:48px;height:48px;display:block;position:relative;transform: rotate(-90deg);}
-#center-button span::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
-#center-button span::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
+#switch-button{top:50%;left:50%;display:flex;align-items:center;justify-content:center;width:90px;height:90px;transform:translateX(-50%) translateY(-50%);border:5px solid #cf4647;background:#fff;border-radius:50%;z-index:200;}
+#switch-button span {width:48px;height:48px;display:block;position:relative;transform: rotate(-90deg);}
+#switch-button span::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
+#switch-button span::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
 
-/*#keypad {height:50%;width:100%;top:0;background:#464a4c;z-index:10;transform:translateY(0);opacity:1;will-change:transform, opacity;transition:transform 0.1s cubic-bezier(0, 0, 0.30, 1);padding:56px 0;}*/
-#keypad {height:100%;width:100%;top:0;background:#cf4647;z-index:100;padding:152px 0 56px;display:none;will-change:display;}
+#keypad {height:100%;width:100%;top:0;background:#cf4647;z-index:400;padding:152px 0 56px;display:none;will-change:display;}
 .slideInUp{display:block!important;animation:slide-in-up .3s cubic-bezier(0, 0, 0.30, 1);}
     @keyframes slide-in-up {from{opacity:0;margin-top:50%;}to{opacity:1;margin-top:0;}}
 
-.number__keypad {display:grid;grid-auto-flow:row;grid-template-columns:auto auto auto;grid-gap:8px;padding:0 8px;height:100%;}
+.number__keypad {display:grid;grid-auto-flow:row;grid-template-columns:auto auto auto;padding:0 8px;height:100%;}
 .key, .key a {align-items:center;justify-content:center;display:flex;color:#fff;font-size:28px;cursor:pointer;}
 .key a {border:1px solid rgba(255, 255, 255, 0.4);border-radius:50%;width:64px;height:64px;background:#d6444d;pointer-events:none;}
 .key:last-of-type a span {position:absolute;content:"";width:24px;height:8px;border:none;border-bottom:2px solid #ffffff;border-left:2px solid #ffffff;transform:rotate(-45deg);top:40%;right:18px;}
@@ -174,9 +173,9 @@ header svg {width:48px;height:48px;margin:4px;display:flex;align-items:center;ju
 
 .app__content {position:relative;min-width:320px;height:100%;margin:56px auto 0;}
 
-.toast__container {position:fixed;bottom:20px;left:20px;pointer-events:none;}
+.toast__container {position:fixed;bottom:20px;left:20px;pointer-events:none;z-index:1000;}
 
-.toast__msg {width:250px;font-family:sans-serif;min-height:50px;background:rgba(0, 0, 0, 0.9);color:#fff;display:flex;align-items:center;justify-content:space-between;font-size:14px;font-weight:500;padding-left:15px;padding-right:10px;word-break:break-all;transition:opacity 0.30s cubic-bezier(0, 0, 0.30, 1);text-transform:initial;margin-bottom:10px;border-radius:5px;}
+.toast__msg {width:250px;font-family:sans-serif;min-height:50px;background:rgba(0, 0, 0, 0.9);color:#fff;display:flex;align-items:center;justify-content:space-between;font-size:14px;font-weight:500;padding-left:15px;padding-right:10px;word-wrap:break-word;transition:opacity 0.30s cubic-bezier(0, 0, 0.30, 1);text-transform:initial;margin-bottom:10px;border-radius:5px;}
 .toast__msg--hide {opacity:0;}
 
 @media screen and (max-width: 768px) {
