--- a/currenc/css/style.css
+++ b/currenc/css/style.css
@@ -71,7 +71,7 @@ body {
 
 header {position:fixed;width:100%;height:56px;top:0;background-color:#cf4647;display:flex;z-index:100;color:#fff;user-select:none;transition:background-color 250ms linear;}
 
-#currencies-list {transition:transform 0.3s cubic-bezier(0, 0, 0.30, 1);will-change:transform;position:fixed;z-index:300;top:0;background:#fff5f6;transform:translateX(-105%);height:100%;width:100%;}
+#currencies-list {transition:transform 0.3s cubic-bezier(0, 0, 0.30, 1);will-change:transform;position:fixed;z-index:300;top:0;background:#fff5f6;transform:translateX(105%);height:100%;width:100%;}
 #currencies-list.open {transform:translateX(0);}
 
 #currencies-list .header {height:56px;position:fixed;width:98%;background:#fff;display:flex;z-index:301;top:8px;border-radius:16px;padding:0 8px;left:1%;box-shadow:0 0 15px -5px rgba(208, 70, 71, 0.9);}
@@ -117,7 +117,8 @@ label {position:absolute;bottom:20%;color:#fff;left:15%;font-size:30px;}
 .pointer {cursor:pointer;}
 .hidden {display:none;}
 
-#switch-button{top:50%;left:50%;display:flex;align-items:center;justify-content:center;width:90px;height:90px;border:5px solid #cf4647;background:#fff;border-radius:50%;z-index:200;margin-top:-45px;margin-left:-45px;}
+#switch-button{top:50%;left:50%;display:flex;align-items:center;justify-content:center;width:90px;height:90px;border:5px solid #cf4647;background:#fff;border-radius:50%;z-index:200;margin-top:-45px;margin-left:-45px;box-shadow:0 0 15px 5px rgba(208, 70, 71, 0.25);transition:all 0.5s ease;will-change:transform;}
+#switch-button:hover{box-shadow:0 0 15px 5px rgba(208, 70, 71, 0.65);}
 #switch-button.rotate {animation:rotate .45s ease-in;}
 @keyframes rotate {
     100%{transform-origin:center;transform:rotate(180deg);}
